aks/01-deploymentCalification.yml
apiVersion: v1
kind: Service
metadata:
  name: calification-service
  namespace: dev
spec:
  selector:
    app: calification
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calification
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calification
  template:
    metadata:
      labels:
        app: calification
    spec:
      containers:
      - name: calification
        image: acralacancha.azurecr.io/calification:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
