aks/01-deploymentNotification.yml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: dev
spec:
  selector:
    app: notification
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
      - name: notification
        image: acralacancha.azurecr.io/notification:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
