aks/01-deploymentSpot.yml
apiVersion: v1
kind: Service
metadata:
  name: spot-service
  namespace: dev
spec:
  selector:
    app: spot
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spot
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spot
  template:
    metadata:
      labels:
        app: spot
    spec:
      containers:
      - name: spot
        image: acralacancha.azurecr.io/spot:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
