aks/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://orange-coast-0f9861b0f.2.azurestaticapps.net "
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - api.alacancha.online
    secretName: api-tls
  rules:
  - host: api.alacancha.online
    http:
      paths:
      - path: /api/auth/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3000
      - path: /api/spot/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: spot-service
            port:
              number: 3000
      - path: /api/calification/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: calification-service
            port:
              number: 3000
      - path: /api/notification/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: notification-service
            port:
              number: 3000
